<resources>
    <string name="app_name">Garden Watering Schedule System</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Rute Penyiraman</string>
    <string name="menu_jadwal">Jadwal Penyiraman</string>
    <string name="menu_tentang">Tentang</string>
    <string name="garden_watering_schedule_system">Garden Watering Schedule System</string>
    <string name="kota_surabaya">Kota Surabaya</string>
    <string name="welcome_to_garden_watering_schedule_system">Welcome to Garden Watering Schedule System</string>
    <string name="go_back">Go Back</string>
    <string name="jadwal_penyiraman_taman">Jadwal Penyiraman Taman</string>
    <string name="tanggal">Tanggal</string>
    <string name="hari">Hari</string>
    <string name="jam">Jam</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="schedule_app">Schedule App</string>
    <string name="version">Version</string>
    <string name="last_update">Last Update</string>
    <string name="by_jasica_ardana_herviyandasari">By Jasica Ardana Herviyandasari</string>
    <string name="mulai">Mulai</string>
    <string name="waktunya_menyiram">Waktunya menyiram!</string>
    <string name="icon_reminder">icon reminder</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="stop">Stop</string>
    <string name="icon_maneuver">icon maneuver</string>
</resources>