<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jessica.gardenwateringschedulesystem.ui.fragment.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_jadwal"
        android:name="com.jessica.gardenwateringschedulesystem.ui.fragment.jadwal.JadwalFragment"
        android:label="@string/menu_jadwal"
        tools:layout="@layout/fragment_jadwal" />

    <fragment
        android:id="@+id/nav_tentang"
        android:name="com.jessica.gardenwateringschedulesystem.ui.fragment.tentang.TentangFragment"
        android:label="@string/menu_tentang"
        tools:layout="@layout/fragment_tentang" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.jessica.gardenwateringschedulesystem.ui.fragment.logout.LogoutFragment"
        android:label="Logout"
        tools:layout="@layout/fragment_logout" />
</navigation>