<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:gravity="center_horizontal"
        android:text="@string/tanggal"
        android:textSize="14sp"
        android:textColor="@color/black"/>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/colorDivider"/>

    <TextView
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:gravity="center_horizontal"
        android:text="@string/hari"
        android:textSize="14sp"
        android:textColor="@color/black"/>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/colorDivider"/>

    <TextView
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:gravity="center_horizontal"
        android:text="@string/jam"
        android:textSize="14sp"
        android:textColor="@color/black"/>
</LinearLayout>