<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreenBackground"
    tools:context=".fragment.tentang.TentangFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="7dp"
        android:text="@string/go_back"
        android:textAllCaps="false"
        android:textColor="@color/colorGreen"
        app:cornerRadius="16dp"
        app:backgroundTint="@color/white"
        app:icon="@drawable/ic_arrow_back"
        app:iconTint="@color/colorGreen"
        app:iconGravity="start"
        app:iconPadding="-5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_tentang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/tentang_aplikasi"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="138dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tentang">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_app"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorGreen"/>

        <View
            android:layout_width="70dp"
            android:layout_height="1dp"
            android:background="@color/colorDivider"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/version"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/colorDivider"/>

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/last_update"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/colorDivider"/>

        <TextView
            android:id="@+id/tv_last_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:paddingRight="80dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/by_jasica_ardana_herviyandasari"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/colorDivider"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>