<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreenBackground"
    tools:context=".fragment.jadwal.JadwalFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="7dp"
        android:text="@string/go_back"
        android:textAllCaps="false"
        android:textColor="@color/colorGreen"
        app:cornerRadius="16dp"
        app:backgroundTint="@color/white"
        app:icon="@drawable/ic_arrow_back"
        app:iconTint="@color/colorGreen"
        app:iconGravity="start"
        app:iconPadding="-5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_jadwal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/jadwal_penyiraman_taman"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back"/>

    <TextView
        android:id="@+id/tv_bulan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginStart="24dp"
        android:text="Bulan : Juli 2021"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_jadwal"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_header_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="12dp"
        app:cardBackgroundColor="@color/colorGreenCard"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_bulan">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:gravity="center_horizontal"
                android:text="@string/tanggal"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorGreen"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorDivider"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"/>

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:gravity="center_horizontal"
                android:text="@string/hari"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorGreen"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorDivider"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:gravity="center_horizontal"
                android:text="@string/jam"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorGreen"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_data_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/colorGreenCard"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@+id/cv_header_table">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_jadwal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>