<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.home.HomeFragment">

    <com.here.android.mpa.mapping.MapView
        android:id="@+id/ext_mapview"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_maneuver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        app:cardCornerRadius="12dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ic_maneuver"
                android:layout_width="38dp"
                android:layout_height="42dp"
                android:src="@drawable/reminder"
                android:layout_gravity="center"
                android:contentDescription="@string/icon_maneuver" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_maneuver_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="600 Meter, Belok kanan"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/tv_maneuver_street_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ke Jl in aja dulu yuk"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:visibility="invisible"
        app:cardCornerRadius="12dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="17dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="47dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="38dp"
                android:layout_height="42dp"
                android:src="@drawable/reminder"
                android:contentDescription="@string/icon_reminder" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/waktunya_menyiram"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tv_tanggal_reminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_mulai_rute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="45dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/whiteSemiTransparent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_perkiraan_selesai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:layout_marginStart="19dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_suggestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="19dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_mulai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:text="@string/mulai"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:stateListAnimator="@null"
                app:cornerRadius="4dp"
                app:icon="@drawable/ic_near_me"
                app:iconTint="@color/black"
                app:backgroundTint="@color/colorLightGreen"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Memuat peta dan rute"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>